--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 					<li><img src="static/img/thum4.png" alt="" /></li>
 					<li><img src="static/img/thum5.png" alt="" /></li>
 				</ul>
-				<div class="imgview">
+				<div class="imgview" id="view">
 					<table>
 						<tr>
 							<td>
-								<a href="#"><img src="static/img/slider2.jpg" alt="" /></a>
+								<a href="#"><img src="static/img/slider2.jpg" alt=""/></a>
 							</td>
 						</tr>
 					</table>
