--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<h1 id="logo">
-			<a href="http://www.8cuo.org" title="臭皮匠" hidefocus="true">臭皮匠</a>
+			<a href="index.html" title="臭皮匠" hidefocus="true">臭皮匠</a>
 		</h1>
 		<div class="nav">
 			<ul id="nav">
@@ -78,7 +78,7 @@
 					<table>
 						<tr>
 							<td>
-								<a href="#"><img src="static/img/slider2.jpg" alt=""/></a>
+								<a href="#" class="lcur"><img src="static/img/slider2.jpg" alt=""/></a>
 							</td>
 						</tr>
 					</table>
