--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<table>
 						<tr>
 							<td>
-								<a href="#" class="lcur"><img src="static/img/slider2.jpg" alt=""/></a>
+								<a href="#"><img class="lcur" src="static/img/slider2.jpg" alt=""/></a>
 							</td>
 						</tr>
 					</table>
