--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!--[if IE 6]>
 			<script type="text/javascript" src="static/js/DD_belatedPNG.js"></script>
 			<script type="text/javascript">
-				DD_belatedPNG.fix('.prev,.next');
+				DD_belatedPNG.fix('.sliderbtn');
 			</script>
 		<![endif]-->
 	</head>
@@ -20,7 +20,7 @@
 		</h1>
 		<div class="nav">
 			<ul id="nav">
-				<li class="current"><a href="#" hidefocus="true">首页</a></li>
+				<li class="current"><a href="#" hidefocus="true">首 &nbsp; 页</a></li>
 				<li><a href="javascript:;" hidefocus="true">案例欣赏</a></li>
 				<li><a href="javascript:;" hidefocus="true">服务内容</a></li>
 				<li><a href="javascript:;" hidefocus="true">关于我们</a></li>
@@ -39,12 +39,8 @@
 								<li><a href="#"><img src="static/img/slider3.jpg" alt="" title="" /></a></li>
 							</ul>
 						</div>
-						<a href="#" class="sliderbtn prev" hidefocus="true">
-							prev
-						</a>
-						<a href="#" class="sliderbtn next" hidefocus="true">
-							next
-						</a>
+						<a href="#" class="sliderbtn prev" hidefocus="true">prev</a>
+						<a href="#" class="sliderbtn next" hidefocus="true">next</a>
 						<div class="toggle">
 							<span class="current">1</span>
 							<span>2</span>
@@ -83,6 +79,8 @@
 						</tr>
 					</table>
 				</div>
+				<a href="#" class="sliderbtn up" hidefocus="true">prev</a>
+				<a href="#" class="sliderbtn down" hidefocus="true">next</a>
 			</div>
 			<div class="area" id="sever">
 				fuwuneirong
