--- a/index.html
+++ b/index.html
@@ -74,10 +74,16 @@
 					<table>
 						<tr>
 							<td>
-								<a href="javascript:;"><img src="static/img/slider2.jpg" alt=""/></a>
+								<a href="javascript:;"><img src="static/img/slider2.jpg" alt="" /></a>
 							</td>
 						</tr>
 					</table>
+					<div id="casetxt">
+						这里是对案例的一个简单的介绍…<br/>
+						这里是对案例的一个简单的介绍…<br/>
+						这里是对案例的一个简单的介绍…<br/>
+						asdadasd
+					</div>
 				</div>
 				<a href="#" class="sliderbtn up" hidefocus="true">prev</a>
 				<a href="#" class="sliderbtn down" hidefocus="true">next</a>
