--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
 							</td>
 						</tr>
 					</table>
-					<div id="casetxt">
-						这里是对案例的一个简单的介绍…<br/>
-						这里是对案例的一个简单的介绍…<br/>
-						这里是对案例的一个简单的介绍…<br/>
-						asdadasd
+					<div class="casetxt">
+						<div id="casetxt">
+							<a href="#">大撒三大三大大大所</a>
+						</div>
 					</div>
 				</div>
 				<a href="#" class="sliderbtn up" hidefocus="true">prev</a>
