--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 					</table>
 					<div class="casetxt">
 						<div id="casetxt">
-							<a href="#">大撒三大三大大大所</a>
+							<p>麒麟财经--CCTV旗下证券资讯网站</p>
+							<p>网址：<a href="http://www.cctvcj.com">http://www.cctvcj.com</a></p>
 						</div>
 					</div>
 				</div>
