--- a/index.html
+++ b/index.html
@@ -88,8 +88,39 @@
 				<a href="#" class="sliderbtn up" hidefocus="true">prev</a>
 				<a href="#" class="sliderbtn down" hidefocus="true">next</a>
 			</div>
-			<div class="area" id="sever">
-				fuwuneirong
+			<div class="area" id="server">
+				<div class="box">
+					<div class="bt qdkf">
+						前端开发
+					</div>
+					<div class="bc">
+						前前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发端开发
+					</div>
+				</div>
+				<div class="box">
+					<div class="bt wysj">
+						网页设计
+					</div>
+					<div class="bc">
+网网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计页设计
+					</div>
+				</div>
+				<div class="box">
+					<div class="bt wzjs">
+						网站建设
+					</div>
+					<div class="bc">
+						wzj网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设s
+					</div>
+				</div>
+				<div class="box">
+					<div class="bt wztg">
+						网站推广
+					</div>
+					<div class="bc">
+						w网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广ztg
+					</div>
+				</div>
 			</div>
 			<div class="area" id="about">
 				guanyuwm
