--- a/index.html
+++ b/index.html
@@ -126,7 +126,40 @@
 				guanyuwm
 			</div>
 			<div class="area" id="contact">
-				lianxiwm
+				<div>
+					<p>
+						<span>QQ:</span>
+					</p>
+					<p>
+						<strong>1519976506</strong> 或 
+						<strong>27231583</strong> 或 
+						<strong>1633178077</strong>
+					</p>
+					<p>
+						<span>MSN:</span>
+					</p>
+					<p>
+						<strong>asdliufeng@hotmail.com</strong> 或
+						<strong>chenchao_0605@hotmail.com</strong> 或
+						<strong>wiwei@live.cn</strong>
+					</p>
+					<p>
+						<span>E-mail:</span>
+					</p>
+					<p>
+						<strong>1519976506@qq.com</strong> 或
+						<strong>27231583@qq.com</strong> 或
+						<strong>1633178077@qq.com</strong>
+					</p>
+					<p>
+						<span>电话:</span>
+					</p>
+					<p>
+						<strong>13917130256</strong> 或
+						<strong>15921522789</strong> 或
+						<strong>18301966351</strong>
+					</p>
+				</div>
 			</div>
 		</div>
 		<div class="ft">
