--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<![endif]-->
 	</head>
 
-	<body>
+	<body class="index">
 		<h1 id="logo">
 			<a href="index.html" title="臭皮匠" hidefocus="true">臭皮匠</a>
 		</h1>
@@ -53,113 +53,16 @@
 				</div>
 			</div>
 			<div class="area" id="case">
-				<ul class="imgthum" id="thum">
-					<li><img src="static/img/thum1.png" alt="" /></li>
-					<li><img src="static/img/thum2.png" alt="" /></li>
-					<li><img src="static/img/thum3.png" alt="" /></li>
-					<li><img src="static/img/thum4.png" alt="" /></li>
-					<li><img src="static/img/thum5.png" alt="" /></li>
-					<li><img src="static/img/thum1.png" alt="" /></li>
-					<li><img src="static/img/thum2.png" alt="" /></li>
-					<li><img src="static/img/thum3.png" alt="" /></li>
-					<li><img src="static/img/thum4.png" alt="" /></li>
-					<li><img src="static/img/thum5.png" alt="" /></li>
-					<li><img src="static/img/thum1.png" alt="" /></li>
-					<li><img src="static/img/thum2.png" alt="" /></li>
-					<li><img src="static/img/thum3.png" alt="" /></li>
-					<li><img src="static/img/thum4.png" alt="" /></li>
-					<li><img src="static/img/thum5.png" alt="" /></li>
-				</ul>
-				<div class="imgview" id="view">
-					<table>
-						<tr>
-							<td>
-								<a href="javascript:;"><img src="static/img/slider2.jpg" alt="" /></a>
-							</td>
-						</tr>
-					</table>
-					<div class="casetxt">
-						<div id="casetxt">
-							<p>麒麟财经--CCTV旗下证券资讯网站</p>
-							<p>网址：<a href="http://www.cctvcj.com">http://www.cctvcj.com</a></p>
-						</div>
-					</div>
-				</div>
-				<a href="#" class="sliderbtn up" hidefocus="true">prev</a>
-				<a href="#" class="sliderbtn down" hidefocus="true">next</a>
+				<iframe src="" frameborder="no"></iframe>
 			</div>
 			<div class="area" id="server">
-				<div class="box">
-					<div class="bt qdkf">
-						前端开发
-					</div>
-					<div class="bc">
-						前前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发端开发
-					</div>
-				</div>
-				<div class="box">
-					<div class="bt wysj">
-						网页设计
-					</div>
-					<div class="bc">
-网网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计页设计
-					</div>
-				</div>
-				<div class="box">
-					<div class="bt wzjs">
-						网站建设
-					</div>
-					<div class="bc">
-						wzj网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设s
-					</div>
-				</div>
-				<div class="box">
-					<div class="bt wztg">
-						网站推广
-					</div>
-					<div class="bc">
-						w网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广ztg
-					</div>
-				</div>
+				<iframe src="" frameborder="no"></iframe>
 			</div>
 			<div class="area" id="about">
-				guanyuwm
+				<iframe src="" frameborder="no"></iframe>
 			</div>
 			<div class="area" id="contact">
-				<div>
-					<p>
-						<span>QQ:</span>
-					</p>
-					<p>
-						<strong>1519976506</strong> 或 
-						<strong>27231583</strong> 或 
-						<strong>1633178077</strong>
-					</p>
-					<p>
-						<span>MSN:</span>
-					</p>
-					<p>
-						<strong>asdliufeng@hotmail.com</strong> 或
-						<strong>chenchao_0605@hotmail.com</strong> 或
-						<strong>wiwei@live.cn</strong>
-					</p>
-					<p>
-						<span>E-mail:</span>
-					</p>
-					<p>
-						<strong>1519976506@qq.com</strong> 或
-						<strong>27231583@qq.com</strong> 或
-						<strong>1633178077@qq.com</strong>
-					</p>
-					<p>
-						<span>电话:</span>
-					</p>
-					<p>
-						<strong>13917130256</strong> 或
-						<strong>15921522789</strong> 或
-						<strong>18301966351</strong>
-					</p>
-				</div>
+				<iframe src="" frameborder="no"></iframe>
 			</div>
 		</div>
 		<div class="ft">
