--- a/case.html
+++ b/case.html
@@ -25,7 +25,7 @@
 		</script>
 	</head>
 
-	<body onloa="display()" class="inner_page">
+	<body onload="display()" class="inner_page">
 		<div class="area" id="case">
 			<ul class="imgthum" id="thum">
 				<li><img src="static/img/thum1.png" alt="" /></li>
