--- a/case.html
+++ b/case.html
@@ -17,6 +17,9 @@
 				overflow:hidden;
 				padding:0;
 			}
+			html{
+				background:url(static/img/loading.gif) no-repeat center center #202020;
+			}
 		</style>
 		<script type="text/javascript">
 			function display(){
