--- a/case.html
+++ b/case.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="inner_page">
 	<head>
 		<meta charset="utf-8" />
 		<title>臭皮匠建站--案例欣赏</title>
@@ -17,9 +17,6 @@
 				overflow:hidden;
 				padding:0;
 			}
-			html{
-				background:url(static/img/loading.gif) no-repeat center center #202020;
-			}
 		</style>
 		<script type="text/javascript">
 			function display(){
@@ -28,7 +25,7 @@
 		</script>
 	</head>
 
-	<body onload="display()" class="inner_page">
+	<body onload="display()">
 		<div class="area" id="case">
 			<ul class="imgthum" id="thum">
 				<li><img src="static/img/thum1.png" alt="" /></li>
