--- a/server.html
+++ b/server.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="inner_page">
 	<head>
 		<meta charset="utf-8" />
 		<title>臭皮匠建站--服务内容</title>
@@ -24,7 +24,7 @@
 		</script>
 	</head>
 
-	<body onload="display()" class="inner_page">
+	<body onload="display()">
 		<div class="area" id="server">
 			<div class="box">
 				<div class="bt qdkf">
