--- a/case.html
+++ b/case.html
@@ -54,8 +54,8 @@
 				</table>
 				<div class="casetxt">
 					<div id="casetxt">
-						<p>麒麟财经--CCTV旗下证券资讯网站</p>
-						<p>网址：<a href="http://www.cctvcj.com">http://www.cctvcj.com</a></p>
+						<p>案例名称</p>
+						<p>网址：<a href="http://www.baidu.com">http://www.baidu.com</a></p>
 					</div>
 				</div>
 			</div>
