--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 								<li><a href="#"><img src="static/img/slider1.jpg" alt="" title="第一张图片" /></a></li>
 								<li><a href="#"><img src="static/img/slider2.jpg" alt="" title="第二张图片" /></a></li>
 								<li><a href="#"><img src="static/img/slider3.jpg" alt="" title="第三张图片" /></a></li>
+								<li><a href="#"><img src="static/img/slider1.jpg" alt="" title="第四张图片" /></a></li>
+								<li><a href="#"><img src="static/img/slider2.jpg" alt="" title="第五张图片" /></a></li>
+								<li><a href="#"><img src="static/img/slider3.jpg" alt="" title="第六张图片" /></a></li>
 							</ul>
 						</div>
 						<a href="#" class="sliderbtn prev" hidefocus="true">prev</a>
@@ -45,6 +48,9 @@
 							<span class="current">1</span>
 							<span>2</span>
 							<span>3</span>
+							<span>4</span>
+							<span>5</span>
+							<span>6</span>
 						</div>
 						<div class="slidertit">
 							<a href="#" hidefocus="true" id="tit"></a>
