--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</h1>
 		<div class="nav">
 			<ul id="nav">
-				<li class="current"><a href="#" hidefocus="true">首 &nbsp; 页</a></li>
+				<li class="current"><a href="javascript:;" hidefocus="true">首 &nbsp; 页</a></li>
 				<li><a href="javascript:;" hidefocus="true">案例欣赏</a></li>
 				<li><a href="javascript:;" hidefocus="true">服务内容</a></li>
 				<li><a href="javascript:;" hidefocus="true">关于我们</a></li>
@@ -42,8 +42,8 @@
 								<li><a href="#"><img src="static/img/slider3.jpg" alt="" title="第六张图片" /></a></li>
 							</ul>
 						</div>
-						<a href="#" class="sliderbtn prev" hidefocus="true">prev</a>
-						<a href="#" class="sliderbtn next" hidefocus="true">next</a>
+						<a href="javascript:;" class="sliderbtn prev" hidefocus="true">prev</a>
+						<a href="javascript:;" class="sliderbtn next" hidefocus="true">next</a>
 						<div class="toggle" id="toggle">
 							<span class="current">1</span>
 							<span>2</span>
