--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<li class="current"><a href="javascript:;" hidefocus="true">首 &nbsp; 页</a></li>
 				<li><a href="javascript:;" hidefocus="true">案例欣赏</a></li>
 				<li><a href="javascript:;" hidefocus="true">服务内容</a></li>
-				<li><a href="javascript:;" hidefocus="true">关于我们</a></li>
+				<!--<li><a href="javascript:;" hidefocus="true">关于我们</a></li>-->
 				<li><a href="javascript:;" hidefocus="true">联系我们</a></li>
 			</ul>
 			<span id="nav_slider">current menu</span>
@@ -108,9 +108,11 @@
 			<div class="area" id="server">
 				<iframe src="" frameborder="no"></iframe>
 			</div>
-			<div class="area" id="about">
-				<iframe src="" frameborder="no"></iframe>
-			</div>
+			<!--
+			   -<div class="area" id="about">
+			   -    <iframe src="" frameborder="no"></iframe>
+			   -</div>
+			   -->
 			<div class="area" id="contact">
 				<iframe src="" frameborder="no"></iframe>
 			</div>
