--- a/case.html
+++ b/case.html
@@ -22,7 +22,9 @@
 		<script type="text/javascript">
 			function display(){
 				var frame = window.parent.window.document.getElementById("case").getElementsByTagName("iframe")[0];
-				frame.style.position = "static";
+				setTimeout(function(){
+					frame.style.position = "static";		
+				},800)
 			}
 		</script>
 	</head>
