--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,9 @@
 		<script type="text/javascript">
 			function display(){
 				var frame = window.parent.window.document.getElementById("contact").getElementsByTagName("iframe")[0];
-				frame.style.position = "static";
+				setTimeout(function(){
+					frame.style.position = "static";		
+				},800)
 			}
 		</script>
 	</head>
