--- a/server.html
+++ b/server.html
@@ -33,32 +33,50 @@
 				<div class="bt qdkf">
 					前端开发
 				</div>
-				<div class="bc">
-					前前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发前端开发端开发
+				<div class="bc clearfix">
+					<img class="pic" src="static/img/qdkf.jpg" alt="前端开发" title="前端开发" />
+					<p>您的网站还在使用table布局？</p>
+					<p>访问速度慢？维护困难？</p>
+					<p>眼馋同行的网站都用上了HTML5和CSS3？</p>
+					<p>那就来联系我们，给您的网站减减肥，让别人羡慕嫉妒恨去吧！</p>
 				</div>
 			</div>
 			<div class="box">
 				<div class="bt wysj">
 					网页设计
 				</div>
-				<div class="bc">
-					网网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计网页设计页设计
+				<div class="bc clearfix">
+					<img class="pic" src="static/img/wysj.jpg" alt="网页设计" title="网页设计" />
+					<p>您想让您的网站在众多同行中脱颖而出吗?</p>
+					<p>您需要设计一个全新的网站，抑或更新现有的网站设计?</p>
+					<p>发现管理网站在线内容很困难，现有的系统不适合您的需求？</p>
+					<p>需要在线销售您的产品吗？</p>
+					<p>我们能帮助您实现愿望，现在就来联系我们吧,亲！</p>
 				</div>
 			</div>
 			<div class="box">
 				<div class="bt wzjs">
 					网站建设
 				</div>
-				<div class="bc">
-					wzj网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设网站建设s
+				<div class="bc clearfix">
+					<img class="pic" src="static/img/wzjs.jpg" alt="网站建设" title="网站建设" />
+					<p>您的网站还在使用table布局？</p>
+					<p>访问速度慢？维护困难？</p>
+					<p>眼馋同行的网站都用上了HTML5和CSS3？</p>
+					<p>那就来联系我们，给您的网站减减肥，让别人羡慕嫉妒恨去吧！</p>
 				</div>
 			</div>
 			<div class="box">
 				<div class="bt wztg">
 					网站推广
 				</div>
-				<div class="bc">
-					w网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广网站推广ztg
+				<div class="bc clearfix">
+					<img class="pic" src="static/img/wztg.jpg" alt="网站推广" title="网站推广" />
+					<p>您想让您的网站在众多同行中脱颖而出吗?</p>
+					<p>您需要设计一个全新的网站，抑或更新现有的网站设计?</p>
+					<p>发现管理网站在线内容很困难，现有的系统不适合您的需求？</p>
+					<p>需要在线销售您的产品吗？</p>
+					<p>我们能帮助您实现愿望，现在就来联系我们吧,亲！</p>
 				</div>
 			</div>
 		</div>
