--- a/contact.html
+++ b/contact.html
@@ -23,40 +23,26 @@
 
 	<body onload="display()">
 		<div class="area" id="contact">
-			<div>
-				<p>
-				<span>QQ:</span>
-				</p>
-				<p>
-				<strong>1519976506</strong> 或 
-				<strong>27231583</strong> 或 
-				<strong>1633178077</strong>
-				</p>
-				<p>
-				<span>MSN:</span>
-				</p>
-				<p>
-				<strong>asdliufeng@hotmail.com</strong> 或
-				<strong>chenchao_0605@hotmail.com</strong> 或
-				<strong>wiwei@live.cn</strong>
-				</p>
-				<p>
-				<span>E-mail:</span>
-				</p>
-				<p>
-				<strong>1519976506@qq.com</strong> 或
-				<strong>27231583@qq.com</strong> 或
-				<strong>1633178077@qq.com</strong>
-				</p>
-				<p>
-				<span>电话:</span>
-				</p>
-				<p>
-				<strong>13917130256</strong> 或
-				<strong>15921522789</strong> 或
-				<strong>18301966351</strong>
-				</p>
-			</div>
+			<dl class="citem">
+				<dt class="qq">QQ</dt>
+				<dd>
+					<p>1519976506</p> 
+					<p>27231583</p>
+					<p>1633178077</p>
+				</dd>
+				<dt class="msn">MSN</dt>
+				<dd>
+					<p>asdliufeng@hotmail.com</p>
+					<p>chenchao_0605@hotmail.com</p>
+					<p>wiwei@live.cn</p>
+				</dd>
+				<dt class="mail">Email</dt>
+				<dd>
+					<p>1519976506@qq.com</p>
+					<p>27231583@qq.com</p>
+					<p>1633178077@qq.com</p>
+				</dd>
+			</dl>
 		</div>
 
 	</body>
