--- a/server.html
+++ b/server.html
@@ -33,6 +33,13 @@
 					<p>访问速度慢？维护困难？</p>
 					<p>眼馋同行的网站都用上了HTML5和CSS3？</p>
 					<p>那就来联系我们，给您的网站减减肥，让别人羡慕嫉妒恨去吧！</p>
+					<ul class="skill">
+						<li class="t"><strong>拥有技能：</strong></li>
+						<li>XHtml &amp;&amp; HTML5</li>
+						<li>CSS2.1 &amp;&amp; CSS3</li>
+						<li>Javascript</li>
+						<li>ActionScript</li>
+					</ul>
 				</div>
 			</div>
 			<div class="box">
@@ -43,9 +50,15 @@
 					<img class="pic" src="static/img/wysj.jpg" alt="网页设计" title="网页设计" />
 					<p>您想让您的网站在众多同行中脱颖而出吗?</p>
 					<p>您需要设计一个全新的网站，抑或更新现有的网站设计?</p>
-					<p>发现管理网站在线内容很困难，现有的系统不适合您的需求？</p>
-					<p>需要在线销售您的产品吗？</p>
-					<p>我们能帮助您实现愿望，现在就来联系我们吧,亲！</p>
+					<p>想给别人留下美好的第一印象，就从给您的网站换肤开始吧!</p>
+					<p>联系我们，让您就是那么自信！</p>
+					<ul class="skill">
+						<li class="t"><strong>使用工具：</strong></li>
+						<li>Photoshop</li>
+						<li>Fireworks</li>
+						<li>Flash</li>
+						<li>Illustrator</li>
+					</ul>
 				</div>
 			</div>
 			<div class="box">
@@ -54,23 +67,16 @@
 				</div>
 				<div class="bc clearfix">
 					<img class="pic" src="static/img/wzjs.jpg" alt="网站建设" title="网站建设" />
-					<p>您的网站还在使用table布局？</p>
-					<p>访问速度慢？维护困难？</p>
-					<p>眼馋同行的网站都用上了HTML5和CSS3？</p>
-					<p>那就来联系我们，给您的网站减减肥，让别人羡慕嫉妒恨去吧！</p>
-				</div>
-			</div>
-			<div class="box">
-				<div class="bt wztg">
-					网站推广
-				</div>
-				<div class="bc clearfix">
-					<img class="pic" src="static/img/wztg.jpg" alt="网站推广" title="网站推广" />
-					<p>您想让您的网站在众多同行中脱颖而出吗?</p>
-					<p>您需要设计一个全新的网站，抑或更新现有的网站设计?</p>
+					<p>同行都有了自己的网站,您怎能落于人后？</p>
 					<p>发现管理网站在线内容很困难，现有的系统不适合您的需求？</p>
 					<p>需要在线销售您的产品吗？</p>
 					<p>我们能帮助您实现愿望，现在就来联系我们吧,亲！</p>
+					<ul class="skill">
+						<li class="t"><strong>可选语言：</strong></li>
+						<li>PHP</li>
+						<li>Python</li>
+						<li>ASP</li>
+					</ul>
 				</div>
 			</div>
 		</div>
