--- a/case.html
+++ b/case.html
@@ -26,35 +26,26 @@
 		<div class="area" id="case">
 			<div class="imgthum">
 				<ul id="thum">
-					<li><img src="static/img/thum1.png" rel="static/img/slider1.jpg" link="http://www.123.com" alt="案例1" title="案例1" /></li>
-					<li><img src="static/img/thum2.png" rel="static/img/slider2.jpg" link="http://www.anc.com" alt="案例2" title="案例2" /></li>
-					<li><img src="static/img/thum3.png" rel="static/img/slider3.jpg" link="http://www.asd.com" alt="案例3" title="案例3" /></li>
-					<li><img src="static/img/thum4.png" rel="static/img/slider1.jpg" link="http://www.a2i.com" alt="案例4" title="案例4" /></li>
-					<li><img src="static/img/thum5.png" rel="static/img/slider2.jpg" link="http://www.plk.com" alt="案例5" title="案例5" /></li>
-					<li><img src="static/img/thum1.png" rel="static/img/slider3.jpg" link="http://www.pki.com" alt="案例6" title="案例6" /></li>
-					<li><img src="static/img/thum2.png" rel="static/img/slider1.jpg" link="http://www.huj.com" alt="案例7" title="案例7" /></li>
-					<li><img src="static/img/thum3.png" rel="static/img/slider2.jpg" link="http://www.hjn.com" alt="案例8" title="案例8" /></li>
-					<li><img src="static/img/thum4.png" rel="static/img/slider3.jpg" link="http://www.oun.com" alt="案例9" title="案例9" /></li>
-					<li><img src="static/img/thum5.png" rel="static/img/slider1.jpg" link="http://www.plm.com" alt="案例10" title="案例10" /></li>
-					<li><img src="static/img/thum1.png" rel="static/img/slider2.jpg" link="http://www.1q3.com" alt="案例11" title="案例11" /></li>
-					<li><img src="static/img/thum2.png" rel="static/img/slider3.jpg" link="http://www.uim.com" alt="案例12" title="案例12" /></li>
-					<li><img src="static/img/thum3.png" rel="static/img/slider1.jpg" link="http://www.uyq.com" alt="案例13" title="案例13" /></li>
-					<li><img src="static/img/thum4.png" rel="static/img/slider2.jpg" link="http://www.uyt.com" alt="案例14" title="案例14" /></li>
-					<li><img src="static/img/thum5.png" rel="static/img/slider3.jpg" link="http://www.poi.com" alt="案例15" title="案例15" /></li>
+					<li><img src="static/img/case_thum_1.jpg" rel="static/img/case_big_1.jpg" link="http://www.cctvcj.com" alt="CCTV旗下证券资讯网站-麒麟财经" title="CCTV旗下证券资讯网站-麒麟财经" /></li>
+					<li><img src="static/img/case_thum_2.jpg" rel="static/img/slider3.jpg" link="http://demo.wpowerw.com/demo/flash/3/" alt="Flash整站一" title="Flash整站一" /></li>
+					<li><img src="static/img/case_thum_3.jpg" rel="static/img/slider4.jpg" link="http://demo.wpowerw.com/demo/flash/6/" alt="Flash整站二" title="Flash整站二" /></li>
+					<li><img src="static/img/case_thum_4.jpg" rel="static/img/slider5.jpg" link="http://demo.wpowerw.com/demo/flash/13/" alt="Flash整站三" title="Flash整站三" /></li>
+					<li><img src="static/img/case_thum_5.jpg" rel="static/img/case_big_5.jpg" link="http://demo.wpowerw.com/demo/flash/19/" alt="Flash整站四" title="Flash整站四" /></li>
+					<li><img src="static/img/case_thum_6.jpg" rel="static/img/case_big_6.jpg" link="http://demo.wpowerw.com/demo/flash/22/" alt="Flash整站五" title="Flash整站五" /></li>
 				</ul>
 			</div>
 			<div class="imgview" id="view">
 				<table>
 					<tr>
 						<td>
-							<a href="#" target="_blank"><img src="static/img/slider2.jpg" alt="" id="bigimg" /></a>
+							<a href="http://www.cctvcj.com" target="_blank"><img src="static/img/case_big_1.jpg" alt="" id="bigimg" /></a>
 						</td>
 					</tr>
 				</table>
 				<div class="casetxt">
 					<div id="casetxt">
-						案例名称1<br/>
-						网址：<a href="http://www.baidu.com" target="_blank">http://www.baidu.com</a>
+						CCTV旗下证券资讯网站-麒麟财经<br/>
+						网址：<a href="http://www.cctvcj.com" target="_blank">http://www.cctvcj.com</a>
 					</div>
 				</div>
 			</div>
