--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<body class="index">
 		<h1 id="logo">
-			<a href="index.html" title="臭皮匠" hidefocus="true">臭皮匠</a>
+			<a href="http://www.8cuo.org" title="臭皮匠" hidefocus="true">臭皮匠</a>
 		</h1>
 		<div class="nav">
 			<ul id="nav">
@@ -34,12 +34,11 @@
 					<div class="slider">
 						<div class="inner" id="slider_box">
 							<ul id="imglist">
-								<li><a href="#"><img src="static/img/slider1.jpg" alt="" title="第一张图片" /></a></li>
-								<li><a href="#"><img src="static/img/slider2.jpg" alt="" title="第二张图片" /></a></li>
-								<li><a href="#"><img src="static/img/slider3.jpg" alt="" title="第三张图片" /></a></li>
-								<li><a href="#"><img src="static/img/slider1.jpg" alt="" title="第四张图片" /></a></li>
-								<li><a href="#"><img src="static/img/slider2.jpg" alt="" title="第五张图片" /></a></li>
-								<li><a href="#"><img src="static/img/slider3.jpg" alt="" title="第六张图片" /></a></li>
+								<li><a target="_blank" href="http://my.68design.net/30866/works/122626.html"><img src="static/img/slider1.jpg" alt="设计--山西法士特汽车传动集团登录界面" title="设计--山西法士特汽车传动集团登录界面" /></a></li>
+								<li><a target="_blank" href="http://my.68design.net/30866/works/92154.html"><img src="static/img/slider2.jpg" alt="设计--水晶涮烤吧" title="设计--水晶涮烤吧" /></a></li>
+								<li><a target="_blank" href="http://demo.wpowerw.com/demo/flash/3/"><img src="static/img/slider3.jpg" alt="Flash整站演示一" title="Flash整站演示一" /></a></li>
+								<li><a target="_blank" href="http://demo.wpowerw.com/demo/flash/6/"><img src="static/img/slider4.jpg" alt="Flash整站演示二" title="Flash整站演示二" /></a></li>
+								<li><a target="_blank" href="http://demo.wpowerw.com/demo/flash/13/"><img src="static/img/slider5.jpg" alt="Flash整站演示三" title="Flash整站演示三" /></a></li>
 							</ul>
 						</div>
 						<a href="javascript:;" class="sliderbtn prev" hidefocus="true">prev</a>
@@ -50,10 +49,9 @@
 							<span>3</span>
 							<span>4</span>
 							<span>5</span>
-							<span>6</span>
 						</div>
 						<div class="slidertit">
-							<a href="#" hidefocus="true" id="tit"></a>
+							<a target="_blank" href="http://my.68design.net/30866/works/122626.html" hidefocus="true" id="tit">设计--山西法士特汽车传动集团登录界面</a>
 						</div>
 					</div>
 					<script type="text/javascript">
@@ -98,6 +96,7 @@
 							slider.toggle.removeClass("current");
 							slider.toggle.eq(slider.index).addClass("current");
 							slider.tit.text(slider.item.eq(slider.index).find("img").attr("title"));
+							slider.tit.attr("href",slider.item.eq(slider.index).children("a").attr("href"));
 						}
 					</script>
 				</div>
